--- a/app.scss
+++ b/app.scss
@@ -6,4 +6,17 @@
     top:0;
     left:0;
   }
+  .tilewrap {
+    position:absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    overflow:hidden;
+    img {
+      position:absolute;
+      width:256px;
+      height:256px;
+    }
+  }
 }
