--- a/app.scss
+++ b/app.scss
@@ -6,13 +6,16 @@
     top:0;
     left:0;
   }
+  .mapwrap {
+    overflow:hidden;
+  }
   .tilewrap {
     position:absolute;
+    opacity:0;
     width:100%;
     height:100%;
     top:0;
     left:0;
-    overflow:hidden;
     img {
       position:absolute;
       width:256px;
