accurate inverse projection now

--- a/app.scss
+++ b/app.scss
@@ -8,6 +8,9 @@
     g.tl_2015_us_cbsa path {
       cursor:pointer;
     }
+    text.label {
+      cursor:pointer;
+    }
   }
   .mapwrap {
     overflow:hidden;
