--- a/app.scss
+++ b/app.scss
@@ -1,9 +1,18 @@
+html {
+  overflow-y: scroll; /*prevents weird resize errors*/
+}
+
 #hous4-16-18 {
+  color:#000;
+  font-size:12pt;
+  line-height:14pt;
+  background-color:#fff;
   select, option {
     font-family:inherit;
     font-size:inherit;
     font-weight:inherit;
     line-height:inherit;
+    color:inherit;
   }
   button.zoomOut {
     font-size:14pt;
@@ -14,6 +23,20 @@
     border:1px solid #000;
     cursor:pointer;
     outline: none;
+  }
+  .hidePopupOption {
+    text-align:left;
+    /*.legendBinBoxposition:absolute;
+    bottom:10px;
+    left:10px;
+    padding:5px;
+    background-color:#fff;
+    opacity:0.9;
+    font-size:9pt; 
+    font-family:"proxima-nova-condensed",sans-serif;
+    border:1px solid #aaa;
+
+    z-index:5000;*/
   }
   .fullscreenButton {
     border:1px solid #aaa;
@@ -38,9 +61,9 @@
   div.zoom_tiles {
     position:absolute;
     font-weight:400;
-    font-size:18pt;
+    font-size:24px;
     border-radius:50%;
-    padding:8pt;
+    padding:18px;
     border:2px solid #000;
     left:10px;
     width:12px;
@@ -50,6 +73,11 @@
     z-index:500;
     text-align:center;
     cursor:pointer;
+    span {
+      position:relative;
+      left:-5px;
+      top:-4px; 
+    }
   }
   div.zoom_tiles:hover {
     background-color:#aaa;
@@ -65,6 +93,7 @@
   div.zoom_tiles_out {
     top:100px;
     line-height:9px;
+    span {left:-1px;}
   }
   button.zoomOut:hover {
     background-color:#F8D8B2;
@@ -72,14 +101,21 @@
   button.zoomOut:active {
     background-color:#ED1C24;
   }
+  .dotExplainwrap {
+    display:inline-block;
+    text-align:center;
+  }
+  .grid02 {
+    text-align:center;
+  }
   .dotExplainer {
     text-align:left;
     width:50%;
     .line {
       
       position:relative;
-      text-indent:-24px;
-      padding-left:24px;
+      text-indent:-18px;
+      padding-left:18px;
     }
     .legend_dot_svg_ex {
       display:inline-block;
@@ -301,9 +337,21 @@
       width:10px;
     }
   }
+
+  .stamen_credit {
+    font-size:10pt;
+    color:#666;
+    a {
+      color:#0C61A4;
+    }
+    margin-top:1em;
+  }
+
 }
 
 #hous4-16-18.fullScreen {
+  z-index:999999;
+  .borderWrapper {border-top:0px;}
   h3.subtitle {
     position:fixed;
     top:0px;
@@ -343,11 +391,11 @@
   }
   div.fixedGroup {
     position:fixed;
-    bottom:10px;
+    bottom:0px;
     width:60%;
     left:15%;
     z-index:2000;
-    border: 1px solid #eee;
+    border: 1px solid #aaa;
     padding:10px;
     background-color:#fff;
     opacity:0.9;
