--- a/app.scss
+++ b/app.scss
@@ -59,24 +59,25 @@ html {
     display:none;
   }
   div.zoom_tiles {
+    box-sizing:content-box;
     position:absolute;
     font-weight:400;
     font-size:24px;
     border-radius:50%;
-    padding:18px;
+    padding:0.5em;
     border:2px solid #000;
     left:10px;
     width:12px;
     height:12px;
-    line-height:12px;
+    line-height:0.6;
     background-color:#fff;
     z-index:500;
     text-align:center;
     cursor:pointer;
     span {
-      position:relative;
+      /*position:relative;
       left:-5px;
-      top:-4px; 
+      top:-4px; */
     }
   }
   div.zoom_tiles:hover {
