--- a/app.scss
+++ b/app.scss
@@ -266,26 +266,27 @@ html {
     font-family:"proxima-nova-condensed",sans-serif;
     margin-top:10px;
     .titlewrap {
-      bottom:0px;
+      top:5px;
       font-size:16pt;
       text-align:center;
       position:absolute;
       width:100%;
     }
-    .titlewrap[data-dataset='nonwhite'] {
+    /*.titlewrap[data-dataset='nonwhite'] {
       right:25%;
-    }
+    }*/
     .gradientwrap {
       position:relative;
       width:80%;
       left:10%;
       white-space:nowrap;
       .minorityConcExp {
+        z-index:100;
         width:50%;
         left:50%;
         text-align:center;
         position:absolute;
-        top:32pt;
+        top:50pt;
         height:8pt;
         border:2px solid #000;
         border-top:0px;
@@ -349,7 +350,8 @@ html {
     }
     .boxWrap {
       text-align:center;
-      padding-bottom:3em;
+      padding-top:2em;
+      padding-bottom:2em;
       position:relative; 
     }
     .entry {
@@ -484,7 +486,9 @@ html {
     margin-right:-12.5%;
     margin-top:1em;
   }
-
+  .note-poc-bins {
+    display:none;
+  }
 }
 
 #hous4-16-18.fullScreen {
