--- a/app.scss
+++ b/app.scss
@@ -15,6 +15,7 @@ html {
     margin-right:2%;
     white-space:normal;
     vertical-align:middle;
+    line-height:1.3;
   }
   h3.subtitle select {
     width:60%;
@@ -367,11 +368,12 @@ html {
     
   }
   
-  
-  
-  svg {
+  .mapwrap > svg {
     width:100%;
     height:100%;
+  }
+  
+  svg { 
     position:absolute;
     top:0;
     left:0;
