--- a/node/src/app.scss
+++ b/node/src/app.scss
@@ -396,6 +396,13 @@ html {
     z-index:10;
     //opacity:0.75;
   }
+  svg.aboveTilesSVG {
+    pointer-events:none;
+    z-index:15;
+  }
+  path[data-nomouse="true"] {
+    pointer-events:none;
+  }
   .mapwrap {
     border:1px solid #aaa;
     overflow:hidden;
