more efficiency updates

--- a/node/src/app.scss
+++ b/node/src/app.scss
@@ -400,6 +400,9 @@ html {
     pointer-events:none;
     z-index:15;
   }
+  g.size.high .layer.tl_2015_us_cbsa {
+    pointer-events:none;
+  }
   path[data-nomouse="true"] {
     pointer-events:none;
   }
