--- a/node/src/app_new.scss
+++ b/node/src/app_new.scss
@@ -3,22 +3,114 @@
   margin-right:auto;
   margin-top:50px;
   position:relative;
-  .map-viewport-outer {
+  .pickers {
+    max-width:250px;
+    font-size:10pt;
+    line-height:14pt;
+    .picker-wrapper {
+      margin-bottom:0.5em;
+      label {
+        display:block;
+        font-weight:bold;
+      }
+      label, select {
+        margin-left:5pt;
+        margin-right:5pt;
+      }
+      select:not([multiple]) {
+        max-width:150px;
+        & > option {
+          max-width:100px;
+        }
+      }
+      ul[name='additional-dot-layers-checkboxes'] {
+        list-style-type:none;
+        margin-left:0;
+        padding-left:0;
+        margin-top:0;
+        .ethnicity-legend-box {
+          display:inline-block;
+          width:12px;
+          height:12px;
+          margin-right:5px;
+          position:absolute;
+          top:4px;
+          left:25px;
+        }
+        li {
+          margin:0;
+          padding:0; 
+          position:relative;
+        }
+        input {
+          position:absolute; 
+          top:0em;
+          left:5px;
+        }
+        label {
+          position:relative;
+          margin-left:40px;
+          font-weight:400;
+        }
+      }
+    }
+    select, option, input {
+      font-family:inherit;
+      font-weight:inherit;
+      font-size:inherit;
+    }
     position:relative;
+    z-index:10;
+    background-color: rgba(250, 242, 240, 0.95);
+    border:1px solid #ddd;
+    padding:10px;
+  }
+  .map-outer-lightbox {
+    position:fixed;
+    background-color: rgba(0, 0, 0, 0.5);
     width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    visibility:hidden
+  }
+  .map-inner-lightbox {
+    position:absolute;
+    top:1%;
+    left:1%;
+    right:1%;
+    bottom:1%;
+    background-color:#fff;
+    border-radius: 1%;
+    padding:1%;
+  }
+  .map-viewport-outer {
+    position:absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    //padding-bottom:56.25%;
     & > div {
       border:1px solid #aaa;
       overflow:hidden;
       position:absolute;
-      height:0;
+      height:100%;
       width:100%;
-      padding-bottom:56.25%;
       & > svg {
         position:absolute;
         width:100%;
         height:100%;
         top:0;
         left:0;
+      }
+      & > canvas {
+        position:absolute;
+        width:100%;
+        height:100%;
+        top:0;
+        left:0;
+        pointer-events:none;
       }
     } 
   }
@@ -64,6 +156,103 @@
       background-color: rgba(255, 255, 255, 0.95);
       padding:10px;
       position:absolute;
+      li, p, ul {
+        margin-bottom:0;
+      }
+    }
+  }
+
+  .legend-container {
+    font-size:12pt;
+    position:absolute;
+    left:10px;
+    right:10px;
+    bottom:10px;
+    z-index:10;
+    background-color: rgba(250, 242, 240, 0.95);
+    min-height:50px;
+    border:1px solid #ddd;
+    padding:10px;
+    & > * {
+      position:relative;
+      z-index:20;
+    }
+    .legend-bins {
+      width:100%;
+    }
+    .legend-bins-inner {
+      height:60px;
+      width:100%;
+      position:relative;
+    }
+    .legend-bin {
+      display:inline-block;
+      position:absolute;
+      .legend-bin-label {
+        display:inline-block;
+        position:relative;
+        top:20px;
+      }
+      label {
+        position:relative;
+        left:-50%;
+      }
+      svg {
+        height:20px;
+        width:100%;
+        position:absolute;
+      } 
+    }
+    .voucher-indicator {
+      margin-bottom:0.3em;
+    }
+    .voucher-circle {
+      width:12px;
+      height:12px;
+      display:inline-block;
+      background-color: rgba(102, 0, 0, 0.5);
+      border-radius:50%;
+      border: 2px solid rgba(255, 255, 255, 0.8);
+    }
+  }
+  .tract_tooltip {
+    font-size:12pt;
+    line-height:14pt;
+    h3 {
+      color:inherit;
+      font-size:14pt;
+      line-height:16pt;
+      margin:0;
+    }
+    ul, li {
+      margin:0;
+      padding:0;
+      list-style-type:none;
+    }
+  }
+
+  .map-close-lightbox {
+    position:absolute;
+    top:2.5%;
+    right:2.5%;
+    background-color: #a00;
+    color:#fff;
+    border-radius:50%;
+    text-align:center;
+    padding:10px;
+    width:30px;
+    height:30px;
+    line-height:30px;
+    cursor:pointer;
+    &:hover {
+      background-color:#600;
+    }
+    span {
+      position:absolute;
+      top:0;
+      left:7.5px;
+      text-align:center;
+      overflow:visible;
     }
   }
 }
