move invertred cbsa to new svg layer

--- a/node/src/app_new.scss
+++ b/node/src/app_new.scss
@@ -103,7 +103,8 @@
         height:100%;
         top:0;
         left:0;
-        mix-blend-mode: multiply;
+        &.main-svg {mix-blend-mode: multiply;}
+        &.inverted-svg {pointer-events: none;}
       }
       & > canvas {
         position:absolute;
