--- a/node/src/app.scss
+++ b/node/src/app.scss
@@ -41,6 +41,47 @@ body, html {
     }
   }
   .pickers {
+    .racial-density-instructions {
+      position:absolute;
+      color:#000;
+      background-color: #fff;
+      padding:10px;
+      border:1px solid #666;
+      left:50px;
+      width:200px;
+      top:30px;
+      box-shadow: -5px 5px 5px #666;
+      display:none;
+      a {
+        font-size:14pt;
+        display:block;
+        margin-top:1em;
+        &:hover {
+          background-color: #ccc;
+        }
+        color:#000;
+        border:2px solid #666;
+        border-radius:5px;
+        text-align:center;
+        padding:5px;
+      }
+      &:before {
+        content: "";
+        display: block;
+        width: 30px;
+        height: 30px;
+        border-left: 1px solid #666;
+        border-bottom: 1px solid #666;
+        transform: rotate(45deg);
+        position: absolute;
+        left: -16px;
+        top: 5.5px;
+        background-color: #fff;
+      }
+      span {
+        position:relative;
+      }
+    }
     max-width:250px;
     font-size:10pt;
     line-height:14pt;
@@ -57,6 +98,7 @@ body, html {
     }
     .picker-wrapper {
       margin-bottom:0.5em;
+      position:relative;
       label {
         display:block;
         font-weight:bold;
