--- a/node/src/slides.scss
+++ b/node/src/slides.scss
@@ -6,9 +6,10 @@
   .slide {
     padding:0;
     display:inline-block;
+    width:100%;
   }
   .slide-inner-wrap {
-    display:inline-block;
+    display:block;
     line-height:1.2;
     background-color: rgba(255, 255, 255, 0.97);
     h2 {
@@ -20,17 +21,36 @@
     margin-bottom:80vh;
     padding:20px;
     border:1px solid #666;
+    max-width:500px;
+    margin-left:auto;
+    margin-right:auto;
+    li {
+      margin-bottom:0.5em;
+      &:last-child {
+        margin-bottom:0;
+      }
+    }
   }
 }
 
 .slide-custom-backgrounds > div {
   display:none;
   opacity:0;
-  top:0;
+  top:10vh;
   left:0;
   width:100%;
   height:100%;
+  height:80vh;
   position:fixed;
+  & > img {
+    width:auto;
+    height:auto;
+    max-height:100%;
+    max-width:100%;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+  }
   &.active {
     display:block;
     opacity:1;
