--- a/node/src/app.scss
+++ b/node/src/app.scss
@@ -624,6 +624,12 @@ body, html {
   .tract_tooltip {
     font-size:12pt;
     line-height:14pt;
+    transition: opacity 0.2s;
+    transition-delay: opacity 0.2;
+    @media (max-width:420px) {
+      font-size:9pt;
+      line-height:11pt;
+    }
     font-family:"proxima-nova",sans-serif;
     h3 {
       color:inherit;
@@ -638,6 +644,10 @@ body, html {
     }
     table {
       font-size:10pt;
+      
+      @media (max-width:420px) {
+        font-size:8pt;
+      }
       line-height:1;
       border-collapse:collapse;
       width:100%;
