--- a/node/src/app.scss
+++ b/node/src/app.scss
@@ -26,12 +26,17 @@ body, html {
       display:block;
     }
   }
+  .pickers-and-close {
+    position:relative;
+  }
   .picker-open-self {
-    position:absolute;
-    top:10px;
-    left:10px;
+    position:relative;
+    top:0px;
+    left:0px;
     z-index:499;
     cursor:pointer;
+    text-align: center;
+    width:120px;
     font-size:11pt;
     padding:3px;
     background-color:#eee;
@@ -43,18 +48,29 @@ body, html {
   .zoom-buttons {
     display:inline-block;
     position:relative;
-    top:60px;
     z-index:30;
     font-weight:bold;
     & > * {
       display:block;
-      margin-bottom:1em;
-      width:100px;
+      margin-top:1em;
+      background-color: #fff;
       font-weight:bold;
+      border:0.5px solid #666;
       font-family:inherit;
+      text-align: center;
+      width:40px;
+      height:40px;
+      cursor:pointer;
+      &:hover {
+        background-color: #ddd;
+      }
     }
   }
+  .pickers-and-zoom {
+    position:relative;
+  }
   .pickers {
+    display:inline-block;
     .racial-density-instructions {
       position:absolute;
       color:#000;
@@ -198,10 +214,10 @@ body, html {
       font-weight:inherit;
       font-size:inherit;
     }
-    position:relative;
     background-color: rgba(250, 242, 240, 0.95);
     border:1px solid #ddd;
     padding:10px;
+    position: relative;
   }
   .map-outer-lightbox {
     position:fixed;
@@ -229,6 +245,7 @@ body, html {
     height:100%;
     top:0;
     left:0;
+    user-select: none;
     //padding-bottom:56.25%;
     & > div {
       border:1px solid #aaa;
@@ -349,6 +366,7 @@ body, html {
     height:0;
     overflow:visible;
     z-index:999;
+    pointer-events: none;
     .tract_tooltip {
       position:relative;
       width:0;
@@ -636,6 +654,7 @@ body, html {
       font-size:14pt;
       line-height:16pt;
       margin:0;
+      font-family: inherit;
     }
     ul, li {
       margin:0;
