--- a/node/src/slides.scss
+++ b/node/src/slides.scss
@@ -7,6 +7,8 @@
     padding:0;
     display:inline-block;
     width:100%;
+    position:relative;
+    z-index:10;
   }
   .slide-inner-wrap {
     display:block;
