--- a/node/src/slides.scss
+++ b/node/src/slides.scss
@@ -36,7 +36,7 @@
 }
 
 .slide-custom-backgrounds > div {
-  display:none;
+  display:block;
   opacity:0;
   top:10vh;
   left:0;
@@ -44,6 +44,22 @@
   height:100%;
   height:80vh;
   position:fixed;
+  transition:opacity 1s;
+  transition-timing-function: linear(0 50%, 1 100%);
+  &.fill {
+    height:auto;
+    width:auto;
+    left:0;
+    top:0;
+    img {
+      width:1500px;
+      max-width:none;
+      max-height:none;
+      margin:0;
+    }
+    left:calc((100vw - 1500px)/2);
+    top:calc((100vh - 1200px)/2);
+  }
   & > img {
     width:auto;
     height:auto;
@@ -56,7 +72,7 @@
   &.active {
     display:block;
     opacity:1;
-    transition:opacity 0.3s;
+    transition-timing-function: linear(0 0%, 1 50%);
   }
 }
 
