--- a/node/src/slides.scss
+++ b/node/src/slides.scss
@@ -57,6 +57,21 @@
       max-height:none;
       margin:0;
     }
+    div.fill-legend {
+      width:auto;
+      margin-left:0;
+      margin-right:0;
+      position:fixed;
+      bottom: 10px;
+      left:50vw;
+      img {
+        left:-50%;
+        width:auto;
+        position:relative;
+        transform: scale(0.5);
+        border:2px solid #666;
+      }
+    }
     left:calc((100vw - 1500px)/2);
     top:calc((100vh - 1200px)/2);
   }
