--- a/node/src/slides.scss
+++ b/node/src/slides.scss
@@ -1,14 +1,21 @@
 .slide-deck {
   position: relative;
   z-index:9999;
-  padding-top:60vh;
-  padding-bottom:60vh;
+  section {
+    padding-top:30vh;
+    padding-bottom:30vh;
+    position:relative;
+  }
   .slide {
     padding:0;
     display:inline-block;
     width:100%;
     position:relative;
     z-index:10;
+    h1, h2, h3, h4, h5, h6 {
+      margin-top:0;
+      padding-top:0.5em;
+    }
   }
   .slide-inner-wrap {
     display:block;
@@ -19,12 +26,17 @@
       line-height:1.2;
     }
     font-size:14pt;
+    line-height:1.4;
     margin-top:80vh;
     margin-bottom:80vh;
+    @media (min-width:994px) {
+      margin-top:20vh;
+      margin-bottom:20vh;
+    }
     padding:20px;
     border:1px solid #666;
     max-width:500px;
-    margin-left:auto;
+    margin-left:0;
     margin-right:auto;
     li {
       margin-bottom:0.5em;
@@ -43,6 +55,11 @@
   left:0;
   width:100%;
   height:100%;
+  @media (min-width:994px) {
+    width:auto;
+    margin-left:560px;
+    margin-right:20px;
+  } 
   height:80vh;
   position:fixed;
   transition:opacity 1s;
@@ -92,14 +109,32 @@
   }
 }
 
+.hous4-16-18-loading-blocker {
+  opacity:0;
+  visibility: hidden;
+}
+
 .cbpp-maps-story-mode {
-  .hous4-16-18-loading-blocker {
-    visibility: hidden;
-  }
   #hous4-16-18 {
     pointer-events:none;
     .map-close-lightbox, .picker-open-self, .pickers {
       display:none;
+    }
+    .map-title {
+      position:fixed;
+      left:0;
+      top:0;
+      text-align:center;
+      background-color: #fff;
+      border-bottom:1px solid #000;
+      h4 {
+        max-width:none;
+        padding:10pt;
+        margin:0;
+        @media (min-width:994px) {
+          margin-left:540px;
+        }
+      }
     }
     .map-outer-lightbox {
       visibility:visible;
@@ -112,6 +147,12 @@
       left:0px;
       right:0px;
       bottom:0px;
+    }
+    .legend-container {
+      @media (min-width:994px) {
+        left:540px;
+      }
+
     }
   }
   .zoom-buttons {display:none !important} 
@@ -127,5 +168,8 @@
   .map-slide-container {
     overflow:hidden;
     position:relative;
+  }
+  &.updating {
+    opacity:0;
   }
 }
