--- a/webroot/site_style.css
+++ b/webroot/site_style.css
@@ -33,7 +33,22 @@
       overflow-anchor: none;
       margin:40px;
       margin-top:20px;
+      max-width:1200px;
+      margin-left:auto;
+      margin-right:auto;
   }
+
+  body article {
+    margin-left:350px;
+  }
+
+  @media (max-width:994px) {
+    body {
+      margin-left:10px;
+      margin:10px;
+    }
+  }
+
 
   @media (max-width:600px) {
     body {
@@ -91,11 +106,10 @@
       text-decoration:none;
   }
   
-  a[name] {
-      color:red;
-  }
+ 
   sup a[name] {
       color:#0c61A4;
+      font-weight:bold;
   }
   
   
